// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should render MiddleSection correctly large 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="middle-section"
  >
    <div
      className="col-xs-4 col-sm-3 visible-large"
    >
      <div
        className="row"
      >
        <div
          className="col"
        >
          <span
            className="label"
          >
            IEP
          </span>
          <strong>
            Standard
          </strong>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col"
        >
          <span
            className="label"
          >
            CSRA
          </span>
          <strong>
            Medium
          </strong>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col"
        >
          <span
            className="label"
          >
            Category
          </span>
          <strong>
            D
          </strong>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 visible-small"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-4 d-inline-block"
        >
          <span
            className="label"
          >
            IEP
          </span>
          <strong>
            Standard
          </strong>
        </div>
        <div
          className="col-xs-4 d-inline-block"
        >
          <span
            className="label"
          >
            CSRA
          </span>
          <strong>
            Medium
          </strong>
        </div>
        <div
          className="col-xs-4 d-inline-block"
        >
          <span
            className="label"
          >
            Category
          </span>
          <strong>
            D
          </strong>
        </div>
      </div>
    </div>
    <div
      className="visible-large"
    >
      <div
        className="col-xs-6 col-sm-3"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <span
              className="label"
            >
              Alerts
            </span>
            <Alerts
              activeAlertCount={9}
              inactiveAlertCount={8}
            />
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col"
          >
            <Location
              assignedLivingUnit={
                Immutable.Map {
                  "description": "H-1-001",
                  "agencyName": "HLI",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-small"
    >
      <div
        className="col-xs-4"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <span
              className="label"
            >
              Alerts
            </span>
            <Alerts
              activeAlertCount={9}
              inactiveAlertCount={8}
            />
          </div>
        </div>
      </div>
      <div
        className="col-xs-4"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <Location
              assignedLivingUnit={
                Immutable.Map {
                  "description": "H-1-001",
                  "agencyName": "HLI",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 col-sm-3"
    >
      <div>
        <Link
          className="button-link"
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/offenders/A1234RE/addCaseNote"
        >
          Add case note
        </Link>
      </div>
      <div
        className="add-gutter-margin-top"
      >
        <Link
          className="button-link"
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/offenders/A1234RE/addAppointment"
        >
          Add appointment
        </Link>
      </div>
    </div>
  </div>,
  "nodes": Array [
    <div
      className="middle-section"
    >
      <div
        className="col-xs-4 col-sm-3 visible-large"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <span
              className="label"
            >
              IEP
            </span>
            <strong>
              Standard
            </strong>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col"
          >
            <span
              className="label"
            >
              CSRA
            </span>
            <strong>
              Medium
            </strong>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col"
          >
            <span
              className="label"
            >
              Category
            </span>
            <strong>
              D
            </strong>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 visible-small"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-4 d-inline-block"
          >
            <span
              className="label"
            >
              IEP
            </span>
            <strong>
              Standard
            </strong>
          </div>
          <div
            className="col-xs-4 d-inline-block"
          >
            <span
              className="label"
            >
              CSRA
            </span>
            <strong>
              Medium
            </strong>
          </div>
          <div
            className="col-xs-4 d-inline-block"
          >
            <span
              className="label"
            >
              Category
            </span>
            <strong>
              D
            </strong>
          </div>
        </div>
      </div>
      <div
        className="visible-large"
      >
        <div
          className="col-xs-6 col-sm-3"
        >
          <div
            className="row"
          >
            <div
              className="col"
            >
              <span
                className="label"
              >
                Alerts
              </span>
              <Alerts
                activeAlertCount={9}
                inactiveAlertCount={8}
              />
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col"
            >
              <Location
                assignedLivingUnit={
                  Immutable.Map {
                    "description": "H-1-001",
                    "agencyName": "HLI",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="visible-small"
      >
        <div
          className="col-xs-4"
        >
          <div
            className="row"
          >
            <div
              className="col"
            >
              <span
                className="label"
              >
                Alerts
              </span>
              <Alerts
                activeAlertCount={9}
                inactiveAlertCount={8}
              />
            </div>
          </div>
        </div>
        <div
          className="col-xs-4"
        >
          <div
            className="row"
          >
            <div
              className="col"
            >
              <Location
                assignedLivingUnit={
                  Immutable.Map {
                    "description": "H-1-001",
                    "agencyName": "HLI",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-3"
      >
        <div>
          <Link
            className="button-link"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/offenders/A1234RE/addCaseNote"
          >
            Add case note
          </Link>
        </div>
        <div
          className="add-gutter-margin-top"
        >
          <Link
            className="button-link"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/offenders/A1234RE/addAppointment"
          >
            Add appointment
          </Link>
        </div>
      </div>
    </div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <MiddleSection
        inmateData={
          Immutable.Map {
            "lastName": "Last",
            "subscribe": [Function],
            "facialImageId": -11,
            "categoryCode": "D",
            "iepLevel": "Standard",
            "alerts": Array [
              Immutable.Map {
                "alertCode": "HA",
              },
              Immutable.Map {
                "alertCode": "XSA",
              },
              Immutable.Map {
                "alertCode": "XA",
              },
              Immutable.Map {
                "alertCode": "PEEP",
              },
            ],
            "activeAlertCount": 9,
            "dispatch": [Function],
            "offenderNo": "A1234RT",
            "assignedLivingUnit": Immutable.Map {
              "description": "H-1-001",
              "agencyName": "HLI",
            },
            "firstName": "First",
            "getState": [Function],
            "keyworker": Immutable.Map {
              "staffId": -6,
            },
            "inactiveAlertCount": 8,
            "csra": "Medium",
          }
        }
        offenderNo="A1234RE"
      />,
      "_debugID": 7,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "inmateData": Immutable.Map {
            "lastName": "Last",
            "subscribe": [Function],
            "facialImageId": -11,
            "categoryCode": "D",
            "iepLevel": "Standard",
            "alerts": Array [
              Immutable.Map {
                "alertCode": "HA",
              },
              Immutable.Map {
                "alertCode": "XSA",
              },
              Immutable.Map {
                "alertCode": "XA",
              },
              Immutable.Map {
                "alertCode": "PEEP",
              },
            ],
            "activeAlertCount": 9,
            "dispatch": [Function],
            "offenderNo": "A1234RT",
            "assignedLivingUnit": Immutable.Map {
              "description": "H-1-001",
              "agencyName": "HLI",
            },
            "firstName": "First",
            "getState": [Function],
            "keyworker": Immutable.Map {
              "staffId": -6,
            },
            "inactiveAlertCount": 8,
            "csra": "Medium",
          },
          "offenderNo": "A1234RE",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 4,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="middle-section"
        >
          <div
            className="col-xs-4 col-sm-3 visible-large"
          >
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  IEP
                </span>
                <strong>
                  Standard
                </strong>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  CSRA
                </span>
                <strong>
                  Medium
                </strong>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  Category
                </span>
                <strong>
                  D
                </strong>
              </div>
            </div>
          </div>
          <div
            className="col-xs-12 visible-small"
          >
            <div
              className="row"
            >
              <div
                className="col-xs-4 d-inline-block"
              >
                <span
                  className="label"
                >
                  IEP
                </span>
                <strong>
                  Standard
                </strong>
              </div>
              <div
                className="col-xs-4 d-inline-block"
              >
                <span
                  className="label"
                >
                  CSRA
                </span>
                <strong>
                  Medium
                </strong>
              </div>
              <div
                className="col-xs-4 d-inline-block"
              >
                <span
                  className="label"
                >
                  Category
                </span>
                <strong>
                  D
                </strong>
              </div>
            </div>
          </div>
          <div
            className="visible-large"
          >
            <div
              className="col-xs-6 col-sm-3"
            >
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <span
                    className="label"
                  >
                    Alerts
                  </span>
                  <Alerts
                    activeAlertCount={9}
                    inactiveAlertCount={8}
                  />
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <Location
                    assignedLivingUnit={
                      Immutable.Map {
                        "description": "H-1-001",
                        "agencyName": "HLI",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="visible-small"
          >
            <div
              className="col-xs-4"
            >
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <span
                    className="label"
                  >
                    Alerts
                  </span>
                  <Alerts
                    activeAlertCount={9}
                    inactiveAlertCount={8}
                  />
                </div>
              </div>
            </div>
            <div
              className="col-xs-4"
            >
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <Location
                    assignedLivingUnit={
                      Immutable.Map {
                        "description": "H-1-001",
                        "agencyName": "HLI",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-xs-12 col-sm-3"
          >
            <div>
              <Link
                className="button-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/offenders/A1234RE/addCaseNote"
              >
                Add case note
              </Link>
            </div>
            <div
              className="add-gutter-margin-top"
            >
              <Link
                className="button-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/offenders/A1234RE/addAppointment"
              >
                Add appointment
              </Link>
            </div>
          </div>
        </div>,
        "_debugID": 8,
        "_renderedOutput": <div
          className="middle-section"
        >
          <div
            className="col-xs-4 col-sm-3 visible-large"
          >
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  IEP
                </span>
                <strong>
                  Standard
                </strong>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  CSRA
                </span>
                <strong>
                  Medium
                </strong>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  Category
                </span>
                <strong>
                  D
                </strong>
              </div>
            </div>
          </div>
          <div
            className="col-xs-12 visible-small"
          >
            <div
              className="row"
            >
              <div
                className="col-xs-4 d-inline-block"
              >
                <span
                  className="label"
                >
                  IEP
                </span>
                <strong>
                  Standard
                </strong>
              </div>
              <div
                className="col-xs-4 d-inline-block"
              >
                <span
                  className="label"
                >
                  CSRA
                </span>
                <strong>
                  Medium
                </strong>
              </div>
              <div
                className="col-xs-4 d-inline-block"
              >
                <span
                  className="label"
                >
                  Category
                </span>
                <strong>
                  D
                </strong>
              </div>
            </div>
          </div>
          <div
            className="visible-large"
          >
            <div
              className="col-xs-6 col-sm-3"
            >
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <span
                    className="label"
                  >
                    Alerts
                  </span>
                  <Alerts
                    activeAlertCount={9}
                    inactiveAlertCount={8}
                  />
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <Location
                    assignedLivingUnit={
                      Immutable.Map {
                        "description": "H-1-001",
                        "agencyName": "HLI",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="visible-small"
          >
            <div
              className="col-xs-4"
            >
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <span
                    className="label"
                  >
                    Alerts
                  </span>
                  <Alerts
                    activeAlertCount={9}
                    inactiveAlertCount={8}
                  />
                </div>
              </div>
            </div>
            <div
              className="col-xs-4"
            >
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <Location
                    assignedLivingUnit={
                      Immutable.Map {
                        "description": "H-1-001",
                        "agencyName": "HLI",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-xs-12 col-sm-3"
          >
            <div>
              <Link
                className="button-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/offenders/A1234RE/addCaseNote"
              >
                Add case note
              </Link>
            </div>
            <div
              className="add-gutter-margin-top"
            >
              <Link
                className="button-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/offenders/A1234RE/addAppointment"
              >
                Add appointment
              </Link>
            </div>
          </div>
        </div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <MiddleSection
    inmateData={
      Immutable.Map {
        "lastName": "Last",
        "subscribe": [Function],
        "facialImageId": -11,
        "categoryCode": "D",
        "iepLevel": "Standard",
        "alerts": Array [
          Immutable.Map {
            "alertCode": "HA",
          },
          Immutable.Map {
            "alertCode": "XSA",
          },
          Immutable.Map {
            "alertCode": "XA",
          },
          Immutable.Map {
            "alertCode": "PEEP",
          },
        ],
        "activeAlertCount": 9,
        "dispatch": [Function],
        "offenderNo": "A1234RT",
        "assignedLivingUnit": Immutable.Map {
          "description": "H-1-001",
          "agencyName": "HLI",
        },
        "firstName": "First",
        "getState": [Function],
        "keyworker": Immutable.Map {
          "staffId": -6,
        },
        "inactiveAlertCount": 8,
        "csra": "Medium",
      }
    }
    offenderNo="A1234RE"
  />,
}
`;

exports[`Header component should render MiddleSection correctly small 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="middle-section"
  >
    <div
      className="col-xs-4 col-sm-3 visible-large"
    >
      <div
        className="row"
      >
        <div
          className="col"
        >
          <span
            className="label"
          >
            IEP
          </span>
          <strong>
            Standard
          </strong>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col"
        >
          <span
            className="label"
          >
            CSRA
          </span>
          <strong>
            Medium
          </strong>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col"
        >
          <span
            className="label"
          >
            Category
          </span>
          <strong>
            D
          </strong>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 visible-small"
    >
      <div
        className="row"
      >
        <div
          className="col-xs-4 d-inline-block"
        >
          <span
            className="label"
          >
            IEP
          </span>
          <strong>
            Standard
          </strong>
        </div>
        <div
          className="col-xs-4 d-inline-block"
        >
          <span
            className="label"
          >
            CSRA
          </span>
          <strong>
            Medium
          </strong>
        </div>
        <div
          className="col-xs-4 d-inline-block"
        >
          <span
            className="label"
          >
            Category
          </span>
          <strong>
            D
          </strong>
        </div>
      </div>
    </div>
    <div
      className="visible-large"
    >
      <div
        className="col-xs-6 col-sm-3"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <span
              className="label"
            >
              Alerts
            </span>
            <Alerts
              activeAlertCount={9}
              inactiveAlertCount={8}
            />
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col"
          >
            <Location
              assignedLivingUnit={
                Immutable.Map {
                  "description": "H-1-001",
                  "agencyName": "HLI",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="visible-small"
    >
      <div
        className="col-xs-4"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <span
              className="label"
            >
              Alerts
            </span>
            <Alerts
              activeAlertCount={9}
              inactiveAlertCount={8}
            />
          </div>
        </div>
      </div>
      <div
        className="col-xs-4"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <Location
              assignedLivingUnit={
                Immutable.Map {
                  "description": "H-1-001",
                  "agencyName": "HLI",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-xs-12 col-sm-3"
    >
      <div>
        <Link
          className="button-link"
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/offenders/A1234RN/addCaseNote"
        >
          Add case note
        </Link>
      </div>
      <div
        className="add-gutter-margin-top"
      >
        <Link
          className="button-link"
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/offenders/A1234RN/addAppointment"
        >
          Add appointment
        </Link>
      </div>
    </div>
  </div>,
  "nodes": Array [
    <div
      className="middle-section"
    >
      <div
        className="col-xs-4 col-sm-3 visible-large"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <span
              className="label"
            >
              IEP
            </span>
            <strong>
              Standard
            </strong>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col"
          >
            <span
              className="label"
            >
              CSRA
            </span>
            <strong>
              Medium
            </strong>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col"
          >
            <span
              className="label"
            >
              Category
            </span>
            <strong>
              D
            </strong>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 visible-small"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-4 d-inline-block"
          >
            <span
              className="label"
            >
              IEP
            </span>
            <strong>
              Standard
            </strong>
          </div>
          <div
            className="col-xs-4 d-inline-block"
          >
            <span
              className="label"
            >
              CSRA
            </span>
            <strong>
              Medium
            </strong>
          </div>
          <div
            className="col-xs-4 d-inline-block"
          >
            <span
              className="label"
            >
              Category
            </span>
            <strong>
              D
            </strong>
          </div>
        </div>
      </div>
      <div
        className="visible-large"
      >
        <div
          className="col-xs-6 col-sm-3"
        >
          <div
            className="row"
          >
            <div
              className="col"
            >
              <span
                className="label"
              >
                Alerts
              </span>
              <Alerts
                activeAlertCount={9}
                inactiveAlertCount={8}
              />
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col"
            >
              <Location
                assignedLivingUnit={
                  Immutable.Map {
                    "description": "H-1-001",
                    "agencyName": "HLI",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="visible-small"
      >
        <div
          className="col-xs-4"
        >
          <div
            className="row"
          >
            <div
              className="col"
            >
              <span
                className="label"
              >
                Alerts
              </span>
              <Alerts
                activeAlertCount={9}
                inactiveAlertCount={8}
              />
            </div>
          </div>
        </div>
        <div
          className="col-xs-4"
        >
          <div
            className="row"
          >
            <div
              className="col"
            >
              <Location
                assignedLivingUnit={
                  Immutable.Map {
                    "description": "H-1-001",
                    "agencyName": "HLI",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-3"
      >
        <div>
          <Link
            className="button-link"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/offenders/A1234RN/addCaseNote"
          >
            Add case note
          </Link>
        </div>
        <div
          className="add-gutter-margin-top"
        >
          <Link
            className="button-link"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/offenders/A1234RN/addAppointment"
          >
            Add appointment
          </Link>
        </div>
      </div>
    </div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <MiddleSection
        inmateData={
          Immutable.Map {
            "lastName": "Last",
            "subscribe": [Function],
            "facialImageId": -11,
            "categoryCode": "D",
            "iepLevel": "Standard",
            "alerts": Array [
              Immutable.Map {
                "alertCode": "HA",
              },
              Immutable.Map {
                "alertCode": "XSA",
              },
              Immutable.Map {
                "alertCode": "XA",
              },
              Immutable.Map {
                "alertCode": "PEEP",
              },
            ],
            "activeAlertCount": 9,
            "dispatch": [Function],
            "offenderNo": "A1234RT",
            "assignedLivingUnit": Immutable.Map {
              "description": "H-1-001",
              "agencyName": "HLI",
            },
            "firstName": "First",
            "getState": [Function],
            "keyworker": Immutable.Map {
              "staffId": -6,
            },
            "inactiveAlertCount": 8,
            "csra": "Medium",
          }
        }
        offenderNo="A1234RN"
      />,
      "_debugID": 11,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "inmateData": Immutable.Map {
            "lastName": "Last",
            "subscribe": [Function],
            "facialImageId": -11,
            "categoryCode": "D",
            "iepLevel": "Standard",
            "alerts": Array [
              Immutable.Map {
                "alertCode": "HA",
              },
              Immutable.Map {
                "alertCode": "XSA",
              },
              Immutable.Map {
                "alertCode": "XA",
              },
              Immutable.Map {
                "alertCode": "PEEP",
              },
            ],
            "activeAlertCount": 9,
            "dispatch": [Function],
            "offenderNo": "A1234RT",
            "assignedLivingUnit": Immutable.Map {
              "description": "H-1-001",
              "agencyName": "HLI",
            },
            "firstName": "First",
            "getState": [Function],
            "keyworker": Immutable.Map {
              "staffId": -6,
            },
            "inactiveAlertCount": 8,
            "csra": "Medium",
          },
          "offenderNo": "A1234RN",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 6,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="middle-section"
        >
          <div
            className="col-xs-4 col-sm-3 visible-large"
          >
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  IEP
                </span>
                <strong>
                  Standard
                </strong>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  CSRA
                </span>
                <strong>
                  Medium
                </strong>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  Category
                </span>
                <strong>
                  D
                </strong>
              </div>
            </div>
          </div>
          <div
            className="col-xs-12 visible-small"
          >
            <div
              className="row"
            >
              <div
                className="col-xs-4 d-inline-block"
              >
                <span
                  className="label"
                >
                  IEP
                </span>
                <strong>
                  Standard
                </strong>
              </div>
              <div
                className="col-xs-4 d-inline-block"
              >
                <span
                  className="label"
                >
                  CSRA
                </span>
                <strong>
                  Medium
                </strong>
              </div>
              <div
                className="col-xs-4 d-inline-block"
              >
                <span
                  className="label"
                >
                  Category
                </span>
                <strong>
                  D
                </strong>
              </div>
            </div>
          </div>
          <div
            className="visible-large"
          >
            <div
              className="col-xs-6 col-sm-3"
            >
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <span
                    className="label"
                  >
                    Alerts
                  </span>
                  <Alerts
                    activeAlertCount={9}
                    inactiveAlertCount={8}
                  />
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <Location
                    assignedLivingUnit={
                      Immutable.Map {
                        "description": "H-1-001",
                        "agencyName": "HLI",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="visible-small"
          >
            <div
              className="col-xs-4"
            >
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <span
                    className="label"
                  >
                    Alerts
                  </span>
                  <Alerts
                    activeAlertCount={9}
                    inactiveAlertCount={8}
                  />
                </div>
              </div>
            </div>
            <div
              className="col-xs-4"
            >
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <Location
                    assignedLivingUnit={
                      Immutable.Map {
                        "description": "H-1-001",
                        "agencyName": "HLI",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-xs-12 col-sm-3"
          >
            <div>
              <Link
                className="button-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/offenders/A1234RN/addCaseNote"
              >
                Add case note
              </Link>
            </div>
            <div
              className="add-gutter-margin-top"
            >
              <Link
                className="button-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/offenders/A1234RN/addAppointment"
              >
                Add appointment
              </Link>
            </div>
          </div>
        </div>,
        "_debugID": 12,
        "_renderedOutput": <div
          className="middle-section"
        >
          <div
            className="col-xs-4 col-sm-3 visible-large"
          >
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  IEP
                </span>
                <strong>
                  Standard
                </strong>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  CSRA
                </span>
                <strong>
                  Medium
                </strong>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  Category
                </span>
                <strong>
                  D
                </strong>
              </div>
            </div>
          </div>
          <div
            className="col-xs-12 visible-small"
          >
            <div
              className="row"
            >
              <div
                className="col-xs-4 d-inline-block"
              >
                <span
                  className="label"
                >
                  IEP
                </span>
                <strong>
                  Standard
                </strong>
              </div>
              <div
                className="col-xs-4 d-inline-block"
              >
                <span
                  className="label"
                >
                  CSRA
                </span>
                <strong>
                  Medium
                </strong>
              </div>
              <div
                className="col-xs-4 d-inline-block"
              >
                <span
                  className="label"
                >
                  Category
                </span>
                <strong>
                  D
                </strong>
              </div>
            </div>
          </div>
          <div
            className="visible-large"
          >
            <div
              className="col-xs-6 col-sm-3"
            >
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <span
                    className="label"
                  >
                    Alerts
                  </span>
                  <Alerts
                    activeAlertCount={9}
                    inactiveAlertCount={8}
                  />
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <Location
                    assignedLivingUnit={
                      Immutable.Map {
                        "description": "H-1-001",
                        "agencyName": "HLI",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="visible-small"
          >
            <div
              className="col-xs-4"
            >
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <span
                    className="label"
                  >
                    Alerts
                  </span>
                  <Alerts
                    activeAlertCount={9}
                    inactiveAlertCount={8}
                  />
                </div>
              </div>
            </div>
            <div
              className="col-xs-4"
            >
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <Location
                    assignedLivingUnit={
                      Immutable.Map {
                        "description": "H-1-001",
                        "agencyName": "HLI",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-xs-12 col-sm-3"
          >
            <div>
              <Link
                className="button-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/offenders/A1234RN/addCaseNote"
              >
                Add case note
              </Link>
            </div>
            <div
              className="add-gutter-margin-top"
            >
              <Link
                className="button-link"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/offenders/A1234RN/addAppointment"
              >
                Add appointment
              </Link>
            </div>
          </div>
        </div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <MiddleSection
    inmateData={
      Immutable.Map {
        "lastName": "Last",
        "subscribe": [Function],
        "facialImageId": -11,
        "categoryCode": "D",
        "iepLevel": "Standard",
        "alerts": Array [
          Immutable.Map {
            "alertCode": "HA",
          },
          Immutable.Map {
            "alertCode": "XSA",
          },
          Immutable.Map {
            "alertCode": "XA",
          },
          Immutable.Map {
            "alertCode": "PEEP",
          },
        ],
        "activeAlertCount": 9,
        "dispatch": [Function],
        "offenderNo": "A1234RT",
        "assignedLivingUnit": Immutable.Map {
          "description": "H-1-001",
          "agencyName": "HLI",
        },
        "firstName": "First",
        "getState": [Function],
        "keyworker": Immutable.Map {
          "staffId": -6,
        },
        "inactiveAlertCount": 8,
        "csra": "Medium",
      }
    }
    offenderNo="A1234RN"
  />,
}
`;

exports[`Header component should render correctly 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="header-details"
  >
    <div
      className="row visible-small"
    >
      <div
        className="col-sm-12 no-padding-left"
      >
        <span
          className="acct-status"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="link"
          tabIndex={0}
        >
          ACCT OPEN
        </span>
        <span
          className="assault-status"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="link"
          tabIndex={0}
        >
          STAFF ASSAULTER
        </span>
        <span
          className="arsonist-status"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="link"
          tabIndex={0}
        >
          <img
            alt=""
            className="arsonist-adjust"
            height="14"
            src="/img/Arsonist_icon.png"
            width="11"
          />
           ARSONIST
        </span>
        <span
          className="disability-status"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="link"
          tabIndex={0}
        >
          <img
            alt=""
            className="disability-adjust"
            height="15"
            src="/img/Disability_icon.png"
            width="14"
          />
           PEEP
        </span>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-md-2 col-xs-3 no-left-gutter no-right-gutter"
      >
        <div
          className="photo clickable"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="link"
          tabIndex={0}
        >
          <EliteImage
            src="/app/images/-11/data"
          />
        </div>
      </div>
      <div
        className="col-xs-9 col-sm-9 col-md-10 col-lg-10 no-left-gutter no-right-gutter add-gutter-bottom-mobile"
      >
        <div
          className="row"
        >
          <div
            className="col-md-12"
          >
            <h1
              className="heading-medium inline-header"
            >
              Last, First
            </h1>
            <div
              className="inline-header-large align-alerts"
            >
              <span
                className="acct-status"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="link"
                tabIndex={0}
              >
                ACCT OPEN
              </span>
              <span
                className="assault-status"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="link"
                tabIndex={0}
              >
                STAFF ASSAULTER
              </span>
              <span
                className="arsonist-status"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="link"
                tabIndex={0}
              >
                <img
                  alt=""
                  className="arsonist-adjust"
                  height="14"
                  src="/img/Arsonist_icon.png"
                  width="11"
                />
                 ARSONIST
              </span>
              <span
                className="disability-status"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="link"
                tabIndex={0}
              >
                <img
                  alt=""
                  className="disability-adjust"
                  height="15"
                  src="/img/Disability_icon.png"
                  width="14"
                />
                 PEEP
              </span>
            </div>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-3 col-sm-3 col-xs-12"
          >
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  Prison number
                </span>
                <strong>
                  A1234RT
                </strong>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="col"
              >
                <span
                  className="label"
                >
                  Key worker
                </span>
                <strong>
                  <Connect(EliteOfficerName)
                    staffId={-6}
                  />
                </strong>
              </div>
            </div>
          </div>
          <div
            className="visible-large"
          >
            <MiddleSection
              inmateData={
                Immutable.Map {
                  "lastName": "Last",
                  "subscribe": [Function],
                  "facialImageId": -11,
                  "categoryCode": "D",
                  "iepLevel": "Standard",
                  "alerts": Array [
                    Immutable.Map {
                      "alertCode": "HA",
                    },
                    Immutable.Map {
                      "alertCode": "XSA",
                    },
                    Immutable.Map {
                      "alertCode": "XA",
                    },
                    Immutable.Map {
                      "alertCode": "PEEP",
                    },
                  ],
                  "activeAlertCount": 9,
                  "dispatch": [Function],
                  "offenderNo": "A1234RT",
                  "assignedLivingUnit": Immutable.Map {
                    "description": "H-1-001",
                    "agencyName": "HLI",
                  },
                  "firstName": "First",
                  "getState": [Function],
                  "keyworker": Immutable.Map {
                    "staffId": -6,
                  },
                  "inactiveAlertCount": 8,
                  "csra": "Medium",
                }
              }
              offenderNo="A1234RT"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="visible-small"
      >
        <MiddleSection
          inmateData={
            Immutable.Map {
              "lastName": "Last",
              "subscribe": [Function],
              "facialImageId": -11,
              "categoryCode": "D",
              "iepLevel": "Standard",
              "alerts": Array [
                Immutable.Map {
                  "alertCode": "HA",
                },
                Immutable.Map {
                  "alertCode": "XSA",
                },
                Immutable.Map {
                  "alertCode": "XA",
                },
                Immutable.Map {
                  "alertCode": "PEEP",
                },
              ],
              "activeAlertCount": 9,
              "dispatch": [Function],
              "offenderNo": "A1234RT",
              "assignedLivingUnit": Immutable.Map {
                "description": "H-1-001",
                "agencyName": "HLI",
              },
              "firstName": "First",
              "getState": [Function],
              "keyworker": Immutable.Map {
                "staffId": -6,
              },
              "inactiveAlertCount": 8,
              "csra": "Medium",
            }
          }
          offenderNo="A1234RT"
        />
      </div>
    </div>
  </div>,
  "nodes": Array [
    <div
      className="header-details"
    >
      <div
        className="row visible-small"
      >
        <div
          className="col-sm-12 no-padding-left"
        >
          <span
            className="acct-status"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="link"
            tabIndex={0}
          >
            ACCT OPEN
          </span>
          <span
            className="assault-status"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="link"
            tabIndex={0}
          >
            STAFF ASSAULTER
          </span>
          <span
            className="arsonist-status"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="link"
            tabIndex={0}
          >
            <img
              alt=""
              className="arsonist-adjust"
              height="14"
              src="/img/Arsonist_icon.png"
              width="11"
            />
             ARSONIST
          </span>
          <span
            className="disability-status"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="link"
            tabIndex={0}
          >
            <img
              alt=""
              className="disability-adjust"
              height="15"
              src="/img/Disability_icon.png"
              width="14"
            />
             PEEP
          </span>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-2 col-xs-3 no-left-gutter no-right-gutter"
        >
          <div
            className="photo clickable"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="link"
            tabIndex={0}
          >
            <EliteImage
              src="/app/images/-11/data"
            />
          </div>
        </div>
        <div
          className="col-xs-9 col-sm-9 col-md-10 col-lg-10 no-left-gutter no-right-gutter add-gutter-bottom-mobile"
        >
          <div
            className="row"
          >
            <div
              className="col-md-12"
            >
              <h1
                className="heading-medium inline-header"
              >
                Last, First
              </h1>
              <div
                className="inline-header-large align-alerts"
              >
                <span
                  className="acct-status"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="link"
                  tabIndex={0}
                >
                  ACCT OPEN
                </span>
                <span
                  className="assault-status"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="link"
                  tabIndex={0}
                >
                  STAFF ASSAULTER
                </span>
                <span
                  className="arsonist-status"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="link"
                  tabIndex={0}
                >
                  <img
                    alt=""
                    className="arsonist-adjust"
                    height="14"
                    src="/img/Arsonist_icon.png"
                    width="11"
                  />
                   ARSONIST
                </span>
                <span
                  className="disability-status"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="link"
                  tabIndex={0}
                >
                  <img
                    alt=""
                    className="disability-adjust"
                    height="15"
                    src="/img/Disability_icon.png"
                    width="14"
                  />
                   PEEP
                </span>
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col-md-3 col-sm-3 col-xs-12"
            >
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <span
                    className="label"
                  >
                    Prison number
                  </span>
                  <strong>
                    A1234RT
                  </strong>
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <span
                    className="label"
                  >
                    Key worker
                  </span>
                  <strong>
                    <Connect(EliteOfficerName)
                      staffId={-6}
                    />
                  </strong>
                </div>
              </div>
            </div>
            <div
              className="visible-large"
            >
              <MiddleSection
                inmateData={
                  Immutable.Map {
                    "lastName": "Last",
                    "subscribe": [Function],
                    "facialImageId": -11,
                    "categoryCode": "D",
                    "iepLevel": "Standard",
                    "alerts": Array [
                      Immutable.Map {
                        "alertCode": "HA",
                      },
                      Immutable.Map {
                        "alertCode": "XSA",
                      },
                      Immutable.Map {
                        "alertCode": "XA",
                      },
                      Immutable.Map {
                        "alertCode": "PEEP",
                      },
                    ],
                    "activeAlertCount": 9,
                    "dispatch": [Function],
                    "offenderNo": "A1234RT",
                    "assignedLivingUnit": Immutable.Map {
                      "description": "H-1-001",
                      "agencyName": "HLI",
                    },
                    "firstName": "First",
                    "getState": [Function],
                    "keyworker": Immutable.Map {
                      "staffId": -6,
                    },
                    "inactiveAlertCount": 8,
                    "csra": "Medium",
                  }
                }
                offenderNo="A1234RT"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="visible-small"
        >
          <MiddleSection
            inmateData={
              Immutable.Map {
                "lastName": "Last",
                "subscribe": [Function],
                "facialImageId": -11,
                "categoryCode": "D",
                "iepLevel": "Standard",
                "alerts": Array [
                  Immutable.Map {
                    "alertCode": "HA",
                  },
                  Immutable.Map {
                    "alertCode": "XSA",
                  },
                  Immutable.Map {
                    "alertCode": "XA",
                  },
                  Immutable.Map {
                    "alertCode": "PEEP",
                  },
                ],
                "activeAlertCount": 9,
                "dispatch": [Function],
                "offenderNo": "A1234RT",
                "assignedLivingUnit": Immutable.Map {
                  "description": "H-1-001",
                  "agencyName": "HLI",
                },
                "firstName": "First",
                "getState": [Function],
                "keyworker": Immutable.Map {
                  "staffId": -6,
                },
                "inactiveAlertCount": 8,
                "csra": "Medium",
              }
            }
            offenderNo="A1234RT"
          />
        </div>
      </div>
    </div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <Header
        inmateData={
          Immutable.Map {
            "lastName": "Last",
            "subscribe": [Function],
            "facialImageId": -11,
            "categoryCode": "D",
            "iepLevel": "Standard",
            "alerts": Array [
              Immutable.Map {
                "alertCode": "HA",
              },
              Immutable.Map {
                "alertCode": "XSA",
              },
              Immutable.Map {
                "alertCode": "XA",
              },
              Immutable.Map {
                "alertCode": "PEEP",
              },
            ],
            "activeAlertCount": 9,
            "dispatch": [Function],
            "offenderNo": "A1234RT",
            "assignedLivingUnit": Immutable.Map {
              "description": "H-1-001",
              "agencyName": "HLI",
            },
            "firstName": "First",
            "getState": [Function],
            "keyworker": Immutable.Map {
              "staffId": -6,
            },
            "inactiveAlertCount": 8,
            "csra": "Medium",
          }
        }
        offenderNo="A1234RT"
        onAlertFlagClick={[Function]}
        onImageClick={[Function]}
      />,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "inmateData": Immutable.Map {
            "lastName": "Last",
            "subscribe": [Function],
            "facialImageId": -11,
            "categoryCode": "D",
            "iepLevel": "Standard",
            "alerts": Array [
              Immutable.Map {
                "alertCode": "HA",
              },
              Immutable.Map {
                "alertCode": "XSA",
              },
              Immutable.Map {
                "alertCode": "XA",
              },
              Immutable.Map {
                "alertCode": "PEEP",
              },
            ],
            "activeAlertCount": 9,
            "dispatch": [Function],
            "offenderNo": "A1234RT",
            "assignedLivingUnit": Immutable.Map {
              "description": "H-1-001",
              "agencyName": "HLI",
            },
            "firstName": "First",
            "getState": [Function],
            "keyworker": Immutable.Map {
              "staffId": -6,
            },
            "inactiveAlertCount": 8,
            "csra": "Medium",
          },
          "offenderNo": "A1234RT",
          "onAlertFlagClick": [Function],
          "onImageClick": [Function],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="header-details"
        >
          <div
            className="row visible-small"
          >
            <div
              className="col-sm-12 no-padding-left"
            >
              <span
                className="acct-status"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="link"
                tabIndex={0}
              >
                ACCT OPEN
              </span>
              <span
                className="assault-status"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="link"
                tabIndex={0}
              >
                STAFF ASSAULTER
              </span>
              <span
                className="arsonist-status"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="link"
                tabIndex={0}
              >
                <img
                  alt=""
                  className="arsonist-adjust"
                  height="14"
                  src="/img/Arsonist_icon.png"
                  width="11"
                />
                 ARSONIST
              </span>
              <span
                className="disability-status"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="link"
                tabIndex={0}
              >
                <img
                  alt=""
                  className="disability-adjust"
                  height="15"
                  src="/img/Disability_icon.png"
                  width="14"
                />
                 PEEP
              </span>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col-md-2 col-xs-3 no-left-gutter no-right-gutter"
            >
              <div
                className="photo clickable"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="link"
                tabIndex={0}
              >
                <EliteImage
                  src="/app/images/-11/data"
                />
              </div>
            </div>
            <div
              className="col-xs-9 col-sm-9 col-md-10 col-lg-10 no-left-gutter no-right-gutter add-gutter-bottom-mobile"
            >
              <div
                className="row"
              >
                <div
                  className="col-md-12"
                >
                  <h1
                    className="heading-medium inline-header"
                  >
                    Last, First
                  </h1>
                  <div
                    className="inline-header-large align-alerts"
                  >
                    <span
                      className="acct-status"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="link"
                      tabIndex={0}
                    >
                      ACCT OPEN
                    </span>
                    <span
                      className="assault-status"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="link"
                      tabIndex={0}
                    >
                      STAFF ASSAULTER
                    </span>
                    <span
                      className="arsonist-status"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="link"
                      tabIndex={0}
                    >
                      <img
                        alt=""
                        className="arsonist-adjust"
                        height="14"
                        src="/img/Arsonist_icon.png"
                        width="11"
                      />
                       ARSONIST
                    </span>
                    <span
                      className="disability-status"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="link"
                      tabIndex={0}
                    >
                      <img
                        alt=""
                        className="disability-adjust"
                        height="15"
                        src="/img/Disability_icon.png"
                        width="14"
                      />
                       PEEP
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col-md-3 col-sm-3 col-xs-12"
                >
                  <div
                    className="row"
                  >
                    <div
                      className="col"
                    >
                      <span
                        className="label"
                      >
                        Prison number
                      </span>
                      <strong>
                        A1234RT
                      </strong>
                    </div>
                  </div>
                  <div
                    className="row"
                  >
                    <div
                      className="col"
                    >
                      <span
                        className="label"
                      >
                        Key worker
                      </span>
                      <strong>
                        <Connect(EliteOfficerName)
                          staffId={-6}
                        />
                      </strong>
                    </div>
                  </div>
                </div>
                <div
                  className="visible-large"
                >
                  <MiddleSection
                    inmateData={
                      Immutable.Map {
                        "lastName": "Last",
                        "subscribe": [Function],
                        "facialImageId": -11,
                        "categoryCode": "D",
                        "iepLevel": "Standard",
                        "alerts": Array [
                          Immutable.Map {
                            "alertCode": "HA",
                          },
                          Immutable.Map {
                            "alertCode": "XSA",
                          },
                          Immutable.Map {
                            "alertCode": "XA",
                          },
                          Immutable.Map {
                            "alertCode": "PEEP",
                          },
                        ],
                        "activeAlertCount": 9,
                        "dispatch": [Function],
                        "offenderNo": "A1234RT",
                        "assignedLivingUnit": Immutable.Map {
                          "description": "H-1-001",
                          "agencyName": "HLI",
                        },
                        "firstName": "First",
                        "getState": [Function],
                        "keyworker": Immutable.Map {
                          "staffId": -6,
                        },
                        "inactiveAlertCount": 8,
                        "csra": "Medium",
                      }
                    }
                    offenderNo="A1234RT"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="visible-small"
            >
              <MiddleSection
                inmateData={
                  Immutable.Map {
                    "lastName": "Last",
                    "subscribe": [Function],
                    "facialImageId": -11,
                    "categoryCode": "D",
                    "iepLevel": "Standard",
                    "alerts": Array [
                      Immutable.Map {
                        "alertCode": "HA",
                      },
                      Immutable.Map {
                        "alertCode": "XSA",
                      },
                      Immutable.Map {
                        "alertCode": "XA",
                      },
                      Immutable.Map {
                        "alertCode": "PEEP",
                      },
                    ],
                    "activeAlertCount": 9,
                    "dispatch": [Function],
                    "offenderNo": "A1234RT",
                    "assignedLivingUnit": Immutable.Map {
                      "description": "H-1-001",
                      "agencyName": "HLI",
                    },
                    "firstName": "First",
                    "getState": [Function],
                    "keyworker": Immutable.Map {
                      "staffId": -6,
                    },
                    "inactiveAlertCount": 8,
                    "csra": "Medium",
                  }
                }
                offenderNo="A1234RT"
              />
            </div>
          </div>
        </div>,
        "_debugID": 2,
        "_renderedOutput": <div
          className="header-details"
        >
          <div
            className="row visible-small"
          >
            <div
              className="col-sm-12 no-padding-left"
            >
              <span
                className="acct-status"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="link"
                tabIndex={0}
              >
                ACCT OPEN
              </span>
              <span
                className="assault-status"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="link"
                tabIndex={0}
              >
                STAFF ASSAULTER
              </span>
              <span
                className="arsonist-status"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="link"
                tabIndex={0}
              >
                <img
                  alt=""
                  className="arsonist-adjust"
                  height="14"
                  src="/img/Arsonist_icon.png"
                  width="11"
                />
                 ARSONIST
              </span>
              <span
                className="disability-status"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="link"
                tabIndex={0}
              >
                <img
                  alt=""
                  className="disability-adjust"
                  height="15"
                  src="/img/Disability_icon.png"
                  width="14"
                />
                 PEEP
              </span>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="col-md-2 col-xs-3 no-left-gutter no-right-gutter"
            >
              <div
                className="photo clickable"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="link"
                tabIndex={0}
              >
                <EliteImage
                  src="/app/images/-11/data"
                />
              </div>
            </div>
            <div
              className="col-xs-9 col-sm-9 col-md-10 col-lg-10 no-left-gutter no-right-gutter add-gutter-bottom-mobile"
            >
              <div
                className="row"
              >
                <div
                  className="col-md-12"
                >
                  <h1
                    className="heading-medium inline-header"
                  >
                    Last, First
                  </h1>
                  <div
                    className="inline-header-large align-alerts"
                  >
                    <span
                      className="acct-status"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="link"
                      tabIndex={0}
                    >
                      ACCT OPEN
                    </span>
                    <span
                      className="assault-status"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="link"
                      tabIndex={0}
                    >
                      STAFF ASSAULTER
                    </span>
                    <span
                      className="arsonist-status"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="link"
                      tabIndex={0}
                    >
                      <img
                        alt=""
                        className="arsonist-adjust"
                        height="14"
                        src="/img/Arsonist_icon.png"
                        width="11"
                      />
                       ARSONIST
                    </span>
                    <span
                      className="disability-status"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="link"
                      tabIndex={0}
                    >
                      <img
                        alt=""
                        className="disability-adjust"
                        height="15"
                        src="/img/Disability_icon.png"
                        width="14"
                      />
                       PEEP
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col-md-3 col-sm-3 col-xs-12"
                >
                  <div
                    className="row"
                  >
                    <div
                      className="col"
                    >
                      <span
                        className="label"
                      >
                        Prison number
                      </span>
                      <strong>
                        A1234RT
                      </strong>
                    </div>
                  </div>
                  <div
                    className="row"
                  >
                    <div
                      className="col"
                    >
                      <span
                        className="label"
                      >
                        Key worker
                      </span>
                      <strong>
                        <Connect(EliteOfficerName)
                          staffId={-6}
                        />
                      </strong>
                    </div>
                  </div>
                </div>
                <div
                  className="visible-large"
                >
                  <MiddleSection
                    inmateData={
                      Immutable.Map {
                        "lastName": "Last",
                        "subscribe": [Function],
                        "facialImageId": -11,
                        "categoryCode": "D",
                        "iepLevel": "Standard",
                        "alerts": Array [
                          Immutable.Map {
                            "alertCode": "HA",
                          },
                          Immutable.Map {
                            "alertCode": "XSA",
                          },
                          Immutable.Map {
                            "alertCode": "XA",
                          },
                          Immutable.Map {
                            "alertCode": "PEEP",
                          },
                        ],
                        "activeAlertCount": 9,
                        "dispatch": [Function],
                        "offenderNo": "A1234RT",
                        "assignedLivingUnit": Immutable.Map {
                          "description": "H-1-001",
                          "agencyName": "HLI",
                        },
                        "firstName": "First",
                        "getState": [Function],
                        "keyworker": Immutable.Map {
                          "staffId": -6,
                        },
                        "inactiveAlertCount": 8,
                        "csra": "Medium",
                      }
                    }
                    offenderNo="A1234RT"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="visible-small"
            >
              <MiddleSection
                inmateData={
                  Immutable.Map {
                    "lastName": "Last",
                    "subscribe": [Function],
                    "facialImageId": -11,
                    "categoryCode": "D",
                    "iepLevel": "Standard",
                    "alerts": Array [
                      Immutable.Map {
                        "alertCode": "HA",
                      },
                      Immutable.Map {
                        "alertCode": "XSA",
                      },
                      Immutable.Map {
                        "alertCode": "XA",
                      },
                      Immutable.Map {
                        "alertCode": "PEEP",
                      },
                    ],
                    "activeAlertCount": 9,
                    "dispatch": [Function],
                    "offenderNo": "A1234RT",
                    "assignedLivingUnit": Immutable.Map {
                      "description": "H-1-001",
                      "agencyName": "HLI",
                    },
                    "firstName": "First",
                    "getState": [Function],
                    "keyworker": Immutable.Map {
                      "staffId": -6,
                    },
                    "inactiveAlertCount": 8,
                    "csra": "Medium",
                  }
                }
                offenderNo="A1234RT"
              />
            </div>
          </div>
        </div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Header
    inmateData={
      Immutable.Map {
        "lastName": "Last",
        "subscribe": [Function],
        "facialImageId": -11,
        "categoryCode": "D",
        "iepLevel": "Standard",
        "alerts": Array [
          Immutable.Map {
            "alertCode": "HA",
          },
          Immutable.Map {
            "alertCode": "XSA",
          },
          Immutable.Map {
            "alertCode": "XA",
          },
          Immutable.Map {
            "alertCode": "PEEP",
          },
        ],
        "activeAlertCount": 9,
        "dispatch": [Function],
        "offenderNo": "A1234RT",
        "assignedLivingUnit": Immutable.Map {
          "description": "H-1-001",
          "agencyName": "HLI",
        },
        "firstName": "First",
        "getState": [Function],
        "keyworker": Immutable.Map {
          "staffId": -6,
        },
        "inactiveAlertCount": 8,
        "csra": "Medium",
      }
    }
    offenderNo="A1234RT"
    onAlertFlagClick={[Function]}
    onImageClick={[Function]}
  />,
}
`;
